cmake_minimum_required(VERSION 3.16)
project(TrivialTCP C)

set(CMAKE_C_STANDARD 11)
set( CMAKE_BUILD_TYPE "Debug" )
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
#add_subdirectory(lib)
add_executable(client ./src/client.c ./src/kernel.c ./src/tju_packet.c ./src/tju_tcp.c)
add_executable(server ./src/server.c ./src/kernel.c ./src/tju_packet.c ./src/tju_tcp.c)
#target_link_libraries(client baseFunc)
target_link_libraries(client pthread)
#target_link_libraries(server baseFunc)
target_link_libraries(server pthread)